--- a/Gabay-Final-V2/Views/DashBoard/Department_Homepage/Department_Master.Master
+++ b/Gabay-Final-V2/Views/DashBoard/Department_Homepage/Department_Master.Master
@@ -55,6 +55,12 @@
                                 </asp:HyperLink>
                             </li>
                             <li class="nav-item p-1">
+                                <asp:HyperLink ID="appointmentList" runat="server" CssClass="topnav-item text-center custom-text-color" NavigateUrl="~/Views/Modules/Appointment/Manage_Appointment.aspx">
+                                  <i class="bi bi-info-square-fill me-2"></i>
+                                  <span class="mt-2">Appointment List</span>
+                                </asp:HyperLink>
+                            </li>
+                            <li class="nav-item p-1">
                                 <asp:HyperLink ID="campusInfo" runat="server" CssClass="topnav-item text-center custom-text-color">
                                   <i class="bi bi-info-square-fill me-2"></i>
                                   <span class="mt-2">Manage Department Information</span>
@@ -133,6 +139,12 @@
                         <asp:HyperLink ID="sideNavCB" runat="server" CssClass="navLinks text-center" NavigateUrl="~/Views/Modules/Chatbot/Department_Chatbot.aspx">
                             <i class="bi bi-chat-left-dots-fill fs-4 me-3"></i>
                             <p class="mt-4">Chatbot</p>
+                        </asp:HyperLink>
+                    </li>
+                    <li class="nav-item ">
+                        <asp:HyperLink ID="sideNavApp" runat="server" CssClass="navLinks text-center" NavigateUrl="~/Views/Modules/Appointment/Manage_Appointment.aspx">
+                            <i class="bi bi-chat-left-dots-fill fs-4 me-3"></i>
+                            <p class="mt-4">Announcement List</p>
                         </asp:HyperLink>
                     </li>
                     <li class="nav-item ">
