--- a/Gabay-Final-V2/Resources/CustomStyleSheet/Appointment/AppointmentStyle.css
+++ b/Gabay-Final-V2/Resources/CustomStyleSheet/Appointment/AppointmentStyle.css
@@ -1,21 +1,4 @@
-﻿﻿ /* Import Google font - Poppins */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-}
-
-body {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    background: white;
-}
-
-.form textarea {
+﻿.form textarea {
     width: 100%;
     resize: vertical;
     outline: none;
