--- a/Gabay-Final-V2/Views/DashBoard/Student_Homepage/Student_Master.Master
+++ b/Gabay-Final-V2/Views/DashBoard/Student_Homepage/Student_Master.Master
@@ -73,7 +73,7 @@
                                 </asp:HyperLink>
                             </li>
                             <li class="nav-item p-1">
-                                <asp:HyperLink ID="faq" runat="server" CssClass="topnav-item text-cente custom-text-color">
+                                <asp:HyperLink ID="faq" runat="server" CssClass="topnav-item text-cente custom-text-color" NavigateUrl="~/Views/Modules/FAQ/FAQ_View.aspx">
                                   <i class="bi bi-question-square-fill me-2"></i>
                                   <span class="mt-2">FAQ</span>
                                 </asp:HyperLink>
@@ -153,7 +153,7 @@
                         </asp:HyperLink>
                     </li>
                     <li class="nav-item ">
-                        <asp:HyperLink ID="sideNavFAQ" runat="server" CssClass="navLinks text-center">
+                        <asp:HyperLink ID="sideNavFAQ" runat="server" CssClass="navLinks text-center" NavigateUrl="~/Views/Modules/FAQ/FAQ_View.aspx">
                             <i class="bi bi-question-square-fill fs-4 me-3"></i>
                             <p class="mt-4">FAQ</p>
                         </asp:HyperLink>
