--- a/Gabay-Final-V2/Resources/CustomStyleSheet/Landing_Page/LandingPageStyle.css
+++ b/Gabay-Final-V2/Resources/CustomStyleSheet/Landing_Page/LandingPageStyle.css
@@ -117,3 +117,453 @@
 .card-body{
     min-height: 100px;
 }
+/*  section */
+
+.services {
+    margin-top:10px;
+}
+
+.section-bg {
+    background-color: #f3f5fa;
+}
+
+.section-title {
+    text-align: center;
+    padding: 30px;
+}
+
+    .section-title h2 {
+        font-size: 32px;
+        font-weight: bold;
+        text-transform: uppercase;
+        margin-bottom: 20px;
+        padding-bottom: 20px;
+        position: relative;
+        color: #37517e;
+    }
+
+        .section-title h2::before {
+            content: "";
+            position: absolute;
+            display: block;
+            width: 120px;
+            height: 1px;
+            background: #ddd;
+            bottom: 1px;
+            left: calc(50% - 60px);
+        }
+
+        .section-title h2::after {
+            content: "";
+            position: absolute;
+            display: block;
+            width: 40px;
+            height: 3px;
+            background: #47b2e4;
+            bottom: 0;
+            left: calc(50% - 20px);
+        }
+
+    .section-title p {
+        margin-bottom: 0;
+    }
+
+
+
+/*--------------------------------------------------------------
+# About Us
+--------------------------------------------------------------*/
+.about .content h3 {
+    font-weight: 600;
+    font-size: 26px;
+}
+
+.about .content ul {
+    list-style: none;
+    padding: 0;
+}
+
+    .about .content ul li {
+        padding-left: 28px;
+        position: relative;
+    }
+
+        .about .content ul li + li {
+            margin-top: 10px;
+        }
+
+    .about .content ul i {
+        position: absolute;
+        left: 0;
+        top: 2px;
+        font-size: 20px;
+        color: #47b2e4;
+        line-height: 1;
+    }
+
+.about .content p:last-child {
+    margin-bottom: 0;
+}
+
+.about .content .btn-learn-more {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 12px 32px;
+    border-radius: 4px;
+    transition: 0.3s;
+    line-height: 1;
+    color: #47b2e4;
+    animation-delay: 0.8s;
+    margin-top: 6px;
+    border: 2px solid #47b2e4;
+}
+
+    .about .content .btn-learn-more:hover {
+        background: #47b2e4;
+        color: #fff;
+        text-decoration: none;
+    }
+
+
+
+/*--------------------------------------------------------------
+# Features
+--------------------------------------------------------------*/
+.services .icon-box {
+    box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
+    padding: 50px 30px;
+    transition: all ease-in-out 0.4s;
+    background: #fff;
+}
+
+    .services .icon-box .icon {
+        margin-bottom: 10px;
+    }
+
+        .services .icon-box .icon i {
+            color: #47b2e4;
+            font-size: 36px;
+            transition: 0.3s;
+        }
+
+    .services .icon-box h4 {
+        font-weight: 500;
+        margin-bottom: 15px;
+        font-size: 24px;
+    }
+
+        .services .icon-box h4 a {
+            color: #37517e;
+            text-decoration: none;
+            transition: ease-in-out 0.3s;
+        }
+
+    .services .icon-box p {
+        line-height: 24px;
+        font-size: 14px;
+        margin-bottom: 0;
+    }
+
+    .services .icon-box:hover {
+        transform: translateY(-10px);
+    }
+
+        .services .icon-box:hover h4 a {
+            color: #47b2e4;
+        }
+
+
+/*--------------------------------------------------------------
+# Team
+--------------------------------------------------------------*/
+.team{
+    padding: 10px;
+}
+.team .member {
+    position: relative;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    border-radius: 5px;
+    background: #fff;
+    transition: 0.5s;
+    height: 100%;
+}
+
+    .team .member .pic {
+        overflow: hidden;
+        width: 180px;
+        border-radius: 50%;
+    }
+
+        .team .member .pic img {
+            transition: ease-in-out 0.3s;
+        }
+
+    .team .member:hover {
+        transform: translateY(-10px);
+    }
+
+    .team .member .member-info {
+        padding-left: 30px;
+    }
+
+    .team .member h4 {
+        font-weight: 700;
+        margin-bottom: 5px;
+        font-size: 20px;
+        color: #37517e;
+    }
+
+    .team .member span {
+        display: block;
+        font-size: 15px;
+        padding-bottom: 10px;
+        position: relative;
+        font-weight: 500;
+    }
+
+        .team .member span::after {
+            content: "";
+            position: absolute;
+            display: block;
+            width: 50px;
+            height: 1px;
+            background: #cbd6e9;
+            bottom: 0;
+            left: 0;
+        }
+
+    .team .member p {
+        margin: 10px 0 0 0;
+        font-size: 14px;
+    }
+
+    .team .member .social {
+        margin-top: 12px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+    }
+
+        .team .member .social a {
+            transition: ease-in-out 0.3s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50px;
+            width: 32px;
+            height: 32px;
+            background: #eff2f8;
+        }
+
+            .team .member .social a i {
+                color: #37517e;
+                font-size: 16px;
+                margin: 0 2px;
+            }
+
+            .team .member .social a:hover {
+                background: #47b2e4;
+            }
+
+                .team .member .social a:hover i {
+                    color: #fff;
+                }
+
+            .team .member .social a + a {
+                margin-left: 8px;
+            }
+
+/* Footer */
+
+#footer {
+    font-size: 14px;
+    background: #37517e;
+}
+
+    #footer .footer-newsletter {
+        padding: 50px 0;
+        background: #f3f5fa;
+        text-align: center;
+        font-size: 15px;
+        color: #444444;
+    }
+
+        #footer .footer-newsletter h4 {
+            font-size: 24px;
+            margin: 0 0 20px 0;
+            padding: 0;
+            line-height: 1;
+            font-weight: 600;
+            color: #37517e;
+        }
+
+        #footer .footer-newsletter form {
+            margin-top: 30px;
+            background: #fff;
+            padding: 6px 10px;
+            position: relative;
+            border-radius: 50px;
+            box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.06);
+            text-align: left;
+        }
+
+            #footer .footer-newsletter form input[type=email] {
+                border: 0;
+                padding: 4px 8px;
+                width: calc(100% - 100px);
+            }
+
+            #footer .footer-newsletter form input[type=submit] {
+                position: absolute;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                border: 0;
+                background: none;
+                font-size: 16px;
+                padding: 0 20px;
+                background: #47b2e4;
+                color: #fff;
+                transition: 0.3s;
+                border-radius: 50px;
+                box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+            }
+
+                #footer .footer-newsletter form input[type=submit]:hover {
+                    background: #209dd8;
+                }
+
+    #footer .footer-top {
+        padding: 60px 0 30px 0;
+        background: #fff;
+    }
+
+        #footer .footer-top .footer-contact {
+            margin-bottom: 30px;
+        }
+
+            #footer .footer-top .footer-contact h3 {
+                font-size: 28px;
+                margin: 0 0 10px 0;
+                padding: 2px 0 2px 0;
+                line-height: 1;
+                text-transform: uppercase;
+                font-weight: 600;
+                color: #37517e;
+            }
+
+            #footer .footer-top .footer-contact p {
+                font-size: 14px;
+                line-height: 24px;
+                margin-bottom: 0;
+                font-family: "Jost", sans-serif;
+                color: #5e5e5e;
+            }
+
+        #footer .footer-top h4 {
+            font-size: 16px;
+            font-weight: bold;
+            color: #37517e;
+            position: relative;
+            padding-bottom: 12px;
+        }
+
+        #footer .footer-top .footer-links {
+            margin-bottom: 30px;
+        }
+
+            #footer .footer-top .footer-links ul {
+                list-style: none;
+                padding: 0;
+                margin: 0;
+            }
+
+                #footer .footer-top .footer-links ul i {
+                    padding-right: 2px;
+                    color: #47b2e4;
+                    font-size: 18px;
+                    line-height: 1;
+                }
+
+                #footer .footer-top .footer-links ul li {
+                    padding: 10px 0;
+                    display: flex;
+                    align-items: center;
+                }
+
+                    #footer .footer-top .footer-links ul li:first-child {
+                        padding-top: 0;
+                    }
+
+                #footer .footer-top .footer-links ul a {
+                    color: #777777;
+                    transition: 0.3s;
+                    display: inline-block;
+                    line-height: 1;
+                }
+
+                    #footer .footer-top .footer-links ul a:hover {
+                        text-decoration: none;
+                        color: #47b2e4;
+                    }
+
+        #footer .footer-top .social-links a {
+            font-size: 18px;
+            display: inline-block;
+            background: #47b2e4;
+            color: #fff;
+            line-height: 1;
+            padding: 8px 0;
+            margin-right: 4px;
+            border-radius: 50%;
+            text-align: center;
+            width: 36px;
+            height: 36px;
+            transition: 0.3s;
+        }
+
+            #footer .footer-top .social-links a:hover {
+                background: #209dd8;
+                color: #fff;
+                text-decoration: none;
+            }
+
+    #footer .footer-bottom {
+        padding-top: 30px;
+        padding-bottom: 30px;
+        color: #fff;
+    }
+
+    #footer .copyright {
+        float: left;
+    }
+
+    #footer .credits {
+        float: right;
+        font-size: 13px;
+    }
+
+        #footer .credits a {
+            transition: 0.3s;
+        }
+
+@media (max-width: 768px) {
+    #footer .footer-bottom {
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+
+    #footer .copyright,
+    #footer .credits {
+        text-align: center;
+        float: none;
+    }
+
+    #footer .credits {
+        padding-top: 4px;
+    }
+}
